--- a/Languages/Japanese/DefInjected/DamageDef/Damages_LocalInjury.xml
+++ b/Languages/Japanese/DefInjected/DamageDef/Damages_LocalInjury.xml
@@ -4,11 +4,11 @@
   <CoreBlast.label>炉心の爆発</CoreBlast.label>
   <CoreBlast.deathMessage>{0} は爆発で死にました。</CoreBlast.deathMessage>
 
-  <ArcDischarge.label>アーク放電</CoreBlast.label>
-  <ArcDischarge.deathMessage>{0} は上手に焼かれました。</CoreBlast.deathMessage>
+  <ArcDischarge.label>アーク放電</ArcDischarge.label>
+  <ArcDischarge.deathMessage>{0} は上手に焼かれました。</ArcDischarge.deathMessage>
 
-  <LaserDischarge.label>レーザー放射</CoreBlast.label>
-  <LaserDischarge.deathMessage>{0} は上手に焼かれました。</CoreBlast.deathMessage>
+  <LaserDischarge.label>レーザー放射</LaserDischarge.label>
+  <LaserDischarge.deathMessage>{0} は上手に焼かれました。</LaserDischarge.deathMessage>
 
   <Bomb_PlasmaToroid.label>プラズマ　トロイド</Bomb_PlasmaToroid.label>
   <Bomb_PlasmaToroid.deathMessage>{0} は爆発で死にました。</Bomb_PlasmaToroid.deathMessage>
