--- a/Languages/Japanese/DefInjected/IncidentDef/Incidents_Rimatomics.xml
+++ b/Languages/Japanese/DefInjected/IncidentDef/Incidents_Rimatomics.xml
@@ -5,14 +5,13 @@
   <TransformerExplosion.letterText>変圧器は過電流により激しい電気爆発を起こしました。</TransformerExplosion.letterText>
   <TransformerExplosion.letterLabel>変圧器爆発</TransformerExplosion.letterLabel>
 
-  <SteamBurst.label>蒸気の噴出</SteamBurst.label>
+  <!--<SteamBurst.label>蒸気の噴出</SteamBurst.label>
   <SteamBurst.letterText>急激な圧力上昇により蒸気パイプの一部が壊れました。</SteamBurst.letterText>
-  <SteamBurst.letterLabel>蒸気の噴出</SteamBurst.letterLabel>
+  <SteamBurst.letterLabel>蒸気の噴出</SteamBurst.letterLabel>-->
 
   <notNothing.label>?</notNothing.label>
   <notNothing.letterText>?</notNothing.letterText>
   <notNothing.letterLabel>?</notNothing.letterLabel>
-
 
   <!--<CrackedFuel.label></CrackedFuel.label>-->
   <!--<CrackedFuel.letterText></CrackedFuel.letterText>-->
