--- a/Languages/Japanese/DefInjected/JobDef/Jobs_Work.xml
+++ b/Languages/Japanese/DefInjected/JobDef/Jobs_Work.xml
@@ -13,7 +13,7 @@
   <RemoveFuelModule.reportString>TargetAから燃料棒を取り出し中</RemoveFuelModule.reportString>
   <LoadSpentFuel.reportString>TargetBをTargetAに運搬中</LoadSpentFuel.reportString>
   <UnloadPlutonium.reportString>TargetAからプルトニウムを取り出し中</UnloadPlutonium.reportString>
-  <RepairCore.reportString>炉心を修理中</RepairCore.reportString>
+  <!--<RepairCore.reportString>炉心を修理中</RepairCore.reportString>-->
 
 
 </LanguageData>
