--- a/Languages/Japanese/DefInjected/ResearchProjectDef/ResearchProjects_RimatomicsActivate.xml
+++ b/Languages/Japanese/DefInjected/ResearchProjectDef/ResearchProjects_RimatomicsActivate.xml
@@ -3,8 +3,8 @@
 
   <RimatomicsActivate.label>リムアトミクス</RimatomicsActivate.label>
   <RimatomicsActivate.description>軌道上の探査機が送っている信号が探知されました。調べれば解読できるはずです。</RimatomicsActivate.description>
-  <RimatomicsActivate.discoveredLetterTitle>リムアトミクス 解除</RimatomicsActivate.descriptionDiscovered>
-  <RimatomicsActivate.discoveredLetterText>探査機との回線が開き、まるで中古人工装具セールスマンのようにやや怪しい男からのメッセージの再生が始まる。彼は「リムアトミクス」という会社の代表として売り口上をしらばく続ける。その途中、研究端末へ数百ギガバイトのダウンロードも始まる。すこし遅れたタイミングでセールスマンは説明に切り替える。「このデータは、リムアトミクス研究端末のための設計図です。あらゆる発展段階の惑星に適した弊社の技術を購入することだけではなく、リムワールドにまで広がる貿易船ネットワークから、原子力開発に欠かせない資源をいっぱいに積んだ貿易船をいつでも(※)呼ぶことができるのです！」\n\n建築メニューにリムアトミクスのタブが追加されました。</RimatomicsActivate.descriptionDiscovered>
+  <RimatomicsActivate.discoveredLetterTitle>リムアトミクス 解除</RimatomicsActivate.discoveredLetterTitle>
+  <RimatomicsActivate.discoveredLetterText>探査機との回線が開き、まるで中古人工装具セールスマンのようにやや怪しい男からのメッセージの再生が始まる。彼は「リムアトミクス」という会社の代表として売り口上をしらばく続ける。その途中、研究端末へ数百ギガバイトのダウンロードも始まる。すこし遅れたタイミングでセールスマンは説明に切り替える。「このデータは、リムアトミクス研究端末のための設計図です。あらゆる発展段階の惑星に適した弊社の技術を購入することだけではなく、リムワールドにまで広がる貿易船ネットワークから、原子力開発に欠かせない資源をいっぱいに積んだ貿易船をいつでも(※)呼ぶことができるのです！」\n\n建築メニューにリムアトミクスのタブが追加されました。</RimatomicsActivate.discoveredLetterText>
 
 
 
