--- a/Languages/Japanese/DefInjected/Rimatomics.RimatomicResearchDef/Rimatomics_APower.xml
+++ b/Languages/Japanese/DefInjected/Rimatomics.RimatomicResearchDef/Rimatomics_APower.xml
@@ -4,7 +4,7 @@
   <Geigercounter.ResearchLabel>放射線測定器</Geigercounter.ResearchLabel>
   <Geigercounter.ResearchDesc>入植者を電離放射線の暴露から守るのはもちろん大切です。そのためにはまず、放射線の存在を確認できる放射線測定器が欠かせません。リムアトミクス設計の携帯型放射線測定器は電離放射線を検知する際に空間線量率をカリカリと音を鳴らし、数値を大きく表示します。\nこの研究が終われば、入植者は全員、自動的に放射線測定器を持つようになります。</Geigercounter.ResearchDesc>
   <Geigercounter.ResearchDescDisc>すべての入植者は放射線測定器を備えています。電離放射線の遭遇する際、その空間線量率はカリカリとした音と表示された数値で測定できます。</Geigercounter.ResearchDescDisc>
-
+  <Geigercounter.ProjTypeLabel>パッシブ機能</Geigercounter.ProjTypeLabel>
   <!-- /////////////// -->
 
   <RadSuits.ResearchLabel>放射線防護服</RadSuits.ResearchLabel>
@@ -14,6 +14,7 @@
   <NuclearResearch.ResearchLabel>原子力の研究施設</NuclearResearch.ResearchLabel>
   <NuclearResearch.ResearchDesc>リムアトミクス設計の原子炉とその他の装置を作るためにはまず、実験炉で原子力の研究と\n稼働の訓練を行う必要があります。</NuclearResearch.ResearchDesc>
   <NuclearResearch.ResearchDescDisc>高度な原子力の研究が可能です。</NuclearResearch.ResearchDescDisc>
+  <NuclearResearch.ProjTypeLabel>研究施設</NuclearResearch.ProjTypeLabel>
 
   <!-- /////////////////////////////////////////////////////// -->
 
