--- a/Languages/Japanese/DefInjected/Rimatomics.DubsModOptions/ModOptions.xml
+++ b/Languages/Japanese/DefInjected/Rimatomics.DubsModOptions/ModOptions.xml
@@ -5,5 +5,9 @@
   <FuelBurnRate.options.0.label>チート</FuelBurnRate.options.0.label>
   <PulseSizeScaling.label>パルス電力消費</PulseSizeScaling.label>
   <PulseSizeScaling.options.0.label>チート</PulseSizeScaling.options.0.label>
+  <ReactorPipeVisibility.label>パイプ表示</ReactorPipeVisibility.label>
+  <ReactorPipeVisibility.options.1.label>床タイルで隠す</ReactorPipeVisibility.options.1.label>
+  <ReactorPipeVisibility.options.2.label>常に表示される</ReactorPipeVisibility.options.2.label>
+  <ReactorPipeVisibility.options.3.label>常に表示されるパートTODO</ReactorPipeVisibility.options.3.label>
 
 </LanguageData>
