--- a/Languages/Japanese/DefInjected/Rimatomics.RimatomicsFailureDef/Rimatomics_FailureEvents.xml
+++ b/Languages/Japanese/DefInjected/Rimatomics.RimatomicsFailureDef/Rimatomics_FailureEvents.xml
@@ -1,35 +1,35 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-    <Failure_FacilityBreakdown.label>TODO</Failure_FacilityBreakdown.label>
-    <Failure_FacilityBreakdown.description>TODO</Failure_FacilityBreakdown.description>
+    <Failure_FacilityBreakdown.label>施設故障</Failure_FacilityBreakdown.label>
+    <Failure_FacilityBreakdown.description>研究中に設備が故障しました</Failure_FacilityBreakdown.description>
 
-    <Failure_RadiationLeak.label>TODO</Failure_RadiationLeak.label>
-    <Failure_RadiationLeak.description>TODO</Failure_RadiationLeak.description>
+    <Failure_RadiationLeak.label>放射線漏れ</Failure_RadiationLeak.label>
+    <Failure_RadiationLeak.description>しばらくの間、設備から通常以上の放射線が漏れています</Failure_RadiationLeak.description>
 
-    <Failure_MicrowaveLeak.label>TODO</Failure_MicrowaveLeak.label>
-    <Failure_MicrowaveLeak.description>TODO</Failure_MicrowaveLeak.description>
+    <Failure_MicrowaveLeak.label>マイクロ波漏れ</Failure_MicrowaveLeak.label>
+    <Failure_MicrowaveLeak.description>設備からマイクロ波が漏れています</Failure_MicrowaveLeak.description>
 
-    <Failure_AcidLeak.label>TODO</Failure_AcidLeak.label>
-    <Failure_AcidLeak.description>TODO</Failure_AcidLeak.description>
+    <Failure_AcidLeak.label>酸漏れ</Failure_AcidLeak.label>
+    <Failure_AcidLeak.description>設備から酸が漏れています</Failure_AcidLeak.description>
 
-    <Failure_GasLeak.label>TODO</Failure_GasLeak.label>
-    <Failure_GasLeak.description>TODO</Failure_GasLeak.description>
+    <Failure_GasLeak.label>ガス漏れ</Failure_GasLeak.label>
+    <Failure_GasLeak.description>設備から毒ガスが漏れています</Failure_GasLeak.description>
 
-    <Failure_BlindingFlash.label>TODO</Failure_BlindingFlash.label>
-    <Failure_BlindingFlash.description>TODO</Failure_BlindingFlash.description>
+    <Failure_BlindingFlash.label>強いフラッシュ</Failure_BlindingFlash.label>
+    <Failure_BlindingFlash.description>設備から強い光のフラッシュが発生しました</Failure_BlindingFlash.description>
 
-    <Failure_ArcDischarge.label>TODO</Failure_ArcDischarge.label>
-    <Failure_ArcDischarge.description>TODO</Failure_ArcDischarge.description>
+    <Failure_ArcDischarge.label>アーク放電</Failure_ArcDischarge.label>
+    <Failure_ArcDischarge.description>設備からアーク放電がありました</Failure_ArcDischarge.description>
 
-    <Failure_LaserDischarge.label>TODO</Failure_LaserDischarge.label>
-    <Failure_LaserDischarge.description>TODO</Failure_LaserDischarge.description>
+    <Failure_LaserDischarge.label>レーザー発射</Failure_LaserDischarge.label>
+    <Failure_LaserDischarge.description>設備からレーザーが誤って発射されました</Failure_LaserDischarge.description>
 
-    <Failure_Overvoltage.label>TODO</Failure_Overvoltage.label>
-    <Failure_Overvoltage.description>TODO</Failure_Overvoltage.description>
+    <Failure_Overvoltage.label>過電圧</Failure_Overvoltage.label>
+    <Failure_Overvoltage.description>施設は電力サージにより出火しています</Failure_Overvoltage.description>
 
-    <Failure_ShortCircuit.label>TODO</Failure_ShortCircuit.label>
-    <Failure_ShortCircuit.description>TODO</Failure_ShortCircuit.description>
+    <Failure_ShortCircuit.label>ショート</Failure_ShortCircuit.label>
+    <Failure_ShortCircuit.description>施設にショートが発生しています。施設へのダメージを防ぐためにすぐに電源を切ってください</Failure_ShortCircuit.description>
 
 <!--
 RimatomicsFailureDef: Failure_FacilityBreakdown.label 'Facility Breakdown'
