--- a/Languages/Japanese/DefInjected/RecipeDef/Recipes_Add_Make.xml
+++ b/Languages/Japanese/DefInjected/RecipeDef/Recipes_Add_Make.xml
@@ -93,9 +93,9 @@
   <Make_NeutronReflectors.description>リムアトミクス原子炉用のアップグレードパーツを作ります。</Make_NeutronReflectors.description>
   <Make_NeutronReflectors.jobString>中性子反射鏡を作っている</Make_NeutronReflectors.jobString>-->
 
-  <Make_ATOM.label>モジュールを作る</Make_ATOM.label>
-  <Make_ATOM.description></Make_ATOM.description>
-  <Make_ATOM.jobString></Make_ATOM.jobString>
+  <Make_ATOM.label>脅威検出モジュールを作る</Make_ATOM.label>
+  <Make_ATOM.description>リムアトミクスの目標捕捉システム用のアップグレードパーツを作ります。</Make_ATOM.description>
+  <Make_ATOM.jobString>脅威検出モジュールを作っている</Make_ATOM.jobString>
 
   <Make_SCAD.label>シールドモジュールを作る</Make_SCAD.label>
   <Make_SCAD.description>リムアトミクスのエネルギー兵器用のアップグレードパーツを作ります。</Make_SCAD.description>
